# d-comms-gui

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.js  package-lock.json  package.json  preload.js  run_instances.sh
.claude/commands/: run-instances.md
.github/workflows/: build.yml  bump-protocol.yml  release.yml
renderer/: index.html  renderer.js  styles.css
src/: addon.cpp  app.cpp  app.h  main_android.cpp  main_desktop.cpp  main_ios.mm  main_macos.mm  tui.c
